--- a/app/assets/stylesheets/_user_log_sign.scss
+++ b/app/assets/stylesheets/_user_log_sign.scss
@@ -1,6 +1,7 @@
 
 /* User sign in and sign forms. */
 .border-form-div {
+  margin-top: 150px;
     max-width: 300px;
     padding: 19px 29px 29px;
     margin: 0 auto 20px;
@@ -45,7 +46,7 @@ and (min-device-width: 768px)
 and (max-device-width: 1024px) 
 and (-webkit-min-device-pixel-ratio: 1) {
     .border-form-div {
-       
+      margin-top: 150px;
       max-width: 400px;
     }
      
@@ -54,5 +55,6 @@ and (-webkit-min-device-pixel-ratio: 1) {
 @media only screen and (min-width: 996px) {
     .border-form-div {
     max-width: 600px;
+    margin-top: 150px;
 }
    }
