--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -50,6 +50,19 @@
   }
 }
 
+.sold {
+  padding: 7px;
+  background-color: lightgray;
+  color: red;
+  width: 75px;
+  border-radius: 5px;
+  text-align: center;    
+  font-weight: 600;  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
  /****Show page Formatting******/
  
