user reviews mvc set up and functioning, just debug the review view page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,23 +13,23 @@
   <hr class="featurette-divider">
 
   
-  <div class="container marketing ">
+  <div class="container marketing ">  
 
     <div class="row">
-      <div class="col-lg-4 ">
-      <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class="bd-placeholder-img rounded-circle " alt="..." width="140" height="140">
+      <div class="col-lg-4 ">  
+      <img src='https://images.unsplash.com/photo-1519220279207-fddf068f2141?ixlib=rb-1.2.1&auto=format&fit=crop&w=635&q=80' class=" rounded-circle " alt="..." width="140" height="140">
       <h2>What?</h2>
         <p>Your Thrift Co. is an online marketplace for buying, selling and personal trend setting.    </p>
         <p><%= link_to "Get Started Today", new_user_session_path, class: "btn btn-outline-secondary"%></p>
       </div>
       <div class="col-lg-4">
-      <img src='https://images.unsplash.com/photo-1527519124254-9dafd8b3533b?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+      <img src='https://images.unsplash.com/photo-1527519124254-9dafd8b3533b?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80' class="rounded-circle" alt="..." width="140" height="140">
       <h2>How?</h2>
         <p>Need help getting started?</p>
         <p><%= link_to "Sell now", new_user_session_path, class: "btn btn-outline-secondary"%></p>
       </div>
       <div class="col-lg-4">
-      <img src='https://images.unsplash.com/photo-1574279606130-09958dc756f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80' class="bd-placeholder-img rounded-circle" alt="..." width="140" height="140">
+      <img src='https://images.unsplash.com/photo-1574279606130-09958dc756f7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80' class="rounded-circle" alt="..." width="140" height="140">
         <h2>Why?</h2>
         <p>Reduce, Reuse, Recycle. Your Thrift Co. is a platform where we can change fashion idealism. Promote less waste, set new unique trends and form a fashion community.</p>
         <p><%= link_to "Find Out More", about_path, class: "btn btn-outline-secondary"%></p>
