--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,14 +4,10 @@
 
 
 <main role="main">   
- 
-<% if current_page?(controller: 'items', action: 'index', category: @items.first.category.name) %>
-<h2 class="heading-profile"><%=  @items.first.category.name %> </h2>
 
-<% else current_page?(items_path) %>
-<h2 class="heading-profile">All Items </h2>
+<h2 class="heading-profile"><%=%></h2>
 
-<% end %>
+
 
 <div class=" bg-light">
         
