--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -1,12 +1,16 @@
 
 <body>
-<main role="main">
+   
 
+<main role="main">   
+ 
+<div class=" bg-light">
 <h1> You've successfully made a payment! </h1>
 
-<%= link_to "Go To Items", items_path
-%>
+<%= link_to "Go To Items", items_path, :class => "btn btn-sm btn-outline-secondary"%>
+        
+</div> 
+</main>
+</body>
 
-</body>      
- 
 
