--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
         <%= f.text_field :username, autocomplete: "username",
          :class => "form-control" %>
       </div>
-
+  
        <div class="field form-group">
         <%= f.label :name %><br/>
         <%= f.text_field :name, autofocus: true, autocomplete: "name",
@@ -32,7 +32,8 @@
           <% if @minimum_password_length %>
           <em>(<%= @minimum_password_length %> characters minimum)</em>
           <% end %><br/>
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.password_field :password, autocomplete: "new-password",
+          :class => "form-control" %>  
        </div>
 
       <div class="field form-group">
