add reviews page for users

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -26,4 +26,9 @@
 }
 
 
-/*****PROFILE MAIN CONTENT******/
+/*****Reviews MAIN CONTENT******/
+
+.review-border {
+    width: 200px;
+    height: 200px;
+}
