--- a/app/views/users/reviews.html.erb
+++ b/app/views/users/reviews.html.erb
@@ -2,28 +2,35 @@
 <body>
 <main role="main">    
 <div class=" bg-light">
-    <div class="show-container">    
-    <h2 class="heading-profile ">Reviews</h2>
+     
+    <h2 class="heading-profile "><%= @user.username%> Store Reviews</h2>
 
-                <% if @user_reviews.empty? %>
-                <div class='row'>
-                <h5> You have no reviews yet</h5>
-                </div>   
-                <% else %>  
-                        <section class="container item-index-container">
-                                <div class="row">
-                                          <% @user_reviews.each do |user_review| %>
-                                              <%= user_reviews.rating %>
-                                              <%= user_reviews.comment %>  
-                                        <% end %>  
 
-                                </div>                     
-                    </section>
-              <% end %>  
-    </div>    
+    <% if  @user_reviews.empty?  %>
+    <h5>You have no reviews yet</h5>         
+    <%else%>
+            <section class="container item-index-container">
+                        <div class="row">
+                                
+                                <% @user_reviews.each do |user_review| %>
+                                        <div class=" column index-item-wrapper review-border"> 
+                                                        <div class = "image-wrapper ">
+                                                                        <div class="item-title-price">
+                                                                        <%= user_review.rating %><br>
+                                                                        <%= user_review.comment %>  
+                                                                        </div>
+                                                                    
+                                                </div>      
+                                        </div>  
+                          
+                                <% end %>    
+                        </div> 
+                             
+            </section>
+    <%end%>
+    
+    
   </div>  
 </main>
 </body>
  
-
-
