titles for shots

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -63,6 +63,19 @@
   margin-right: auto;
 }
 
+.reviewed {
+  padding: 7px;
+  background-color: lightgray;
+  color: green;
+  width: 100px;
+  border-radius: 5px;
+  text-align: center;    
+  font-weight: 600;  
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
  /****Show page Formatting******/
  
